update: doc comment
